# bookraiderv2

./: Cargo.toml  Dockerfile  save.json  sites.json  tesst.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: add.tsx  resbox.tsx  search.tsx
src/: handlers.rs  http.rs  httpdoc.rs  main.rs  test.rs
src/https/: bookdata.rs  handlers.rs  httpdoc.rs  mp3.rs
src/utils/: checks.rs  structs.rs  text.rs
