[package]
name = "bookraiderv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
scraper = "0.16.0"
select = "0.6.0"
tokio = { version = "1", features = ["full"] }
serde = {version="1.0",features=["derive"]}
serde_json = "1.0"
futures = "0.3.28"
regex = "1.4"
actix-web="^4"
htmlescape = "0.3.1"
async-recursion = "1.0.4"
ffmpeg-cli = "0.1.0"
hound = "3.5.0"

